--- a/web/templates/video/show.html.eex
+++ b/web/templates/video/show.html.eex
@@ -22,6 +22,11 @@
     <%= @video.description %>
   </li>
 
+  <li>
+    <strong>Category:</strong>
+    <%= if category = @video.category, do: category.name %>
+  </li>
+
 </ul>
 
 <%= link "Edit", to: video_path(@conn, :edit, @video) %>
